2012-01-03  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/51719
	* value-prof.c (gimple_ic): When indirect call isn't noreturn,
	but direct call is, clear direct call's lhs and don't add fallthrough
	edge from dcall_bb to join_bb and PHIs.

2012-01-03  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.md ("*cmp<mode>_ccs"): Fix comment mentioning
	the instructions emitted by the pattern.
	("*TDC_insn_<mode>"): Add comment.

2012-01-03  Richard Guenther  <rguenther@suse.de>

	PR middle-end/51730
	* fold-const.c (fold_comparison): Properly canonicalize
	tree offset and HOST_WIDE_INT bit position.

2012-01-02  Uros Bizjak  <ubizjak@gmail.com>

	* config/ia64/ia64.c (expand_vec_perm_broadcast): Use correct
	operands for extzv pattern.

2012-01-02  Jakub Jelinek  <jakub@redhat.com>

	PR bootstrap/51725
	* cselib.c (add_mem_for_addr): Call canonical_cselib_val
	on mem_elt first.

2012-01-02  Sandra Loosemore  <sandra@codesourcery.com>

	* doc/invoke.texi (-flto and related options): Copy-edit.

2012-01-02  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/mips/mips.md (loadgp_newabi_<mode>): Add missing earlyclobber.

2012-01-02  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/sse.md (*avx2_gatherdi<mode>_3, *avx2_gatherdi<mode>_4):
	New patterns.

2012-01-02  Richard Sandiford  <rdsandiford@googlemail.com>

	* expr.h (move_by_pieces_ninsns): Declare.
	* expr.c (move_by_pieces_ninsns): Make external.
	* config/mips/mips-protos.h (mips_move_by_pieces_p): Declare.
	(mips_store_by_pieces_p): Likewise.
	* config/mips/mips.h (MOVE_BY_PIECES_P): Call mips_move_by_pieces_p.
	(STORE_BY_PIECES_P): Likewise mips_store_by_pieces_p.
	* config/mips/mips.c (mips_move_by_pieces_p): New function.
	(mips_store_by_pieces_p): Likewise.

2012-01-02  Jakub Jelinek  <jakub@redhat.com>

	* passes.c (register_one_dump_file): Free full_name.

	* reload1.c (reload): Don't allocate reg_max_ref_width here.
	(calculate_elim_costs_all_insns): Free offsets_at and