@@ -1,3 +1,8 @@
+2012-01-03  Richard Guenther  <rguenther@suse.de>
+
+	PR debug/51650
+	* g++.dg/lto/pr51650-3_0.C: New testcase.
+
 2012-01-03  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/15867
