@@ -1,3 +1,9 @@
+2012-01-03  Richard Guenther  <rguenther@suse.de>
+
+	PR debug/51650
+	* dwarf2out.c (dwarf2out_finish): Always create a DIE for
+	the context of a limbo DIE when it does not already exist.
+
 2012-01-03  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/51719
